--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanLyNhanVienBUS.cs" />
+    <Compile Include="TaiKhoanBUS.cs" />
     <Compile Include="ThongKeBUS.cs" />
   </ItemGroup>
   <ItemGroup>
