--- a/QuanLyKhoHang/QuanLyKhoHang.csproj
+++ b/QuanLyKhoHang/QuanLyKhoHang.csproj
@@ -170,6 +170,12 @@
   <ItemGroup>
     <None Include="Resources\search.png" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BUS\BUS.csproj">
+      <Project>{b8c40567-fdee-4e84-8826-a78c84ec1323}</Project>
+      <Name>BUS</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
