--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -47,6 +47,7 @@
     <Compile Include="KhoBUS.cs" />
     <Compile Include="LoaiSanPhamBUS.cs" />
     <Compile Include="NhaCungCapBUS.cs" />
+    <Compile Include="NhanVienBUS.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanLyNhanVienBUS.cs" />
