--- a/QuanLyKhoHang/QuanLyKhoHang.csproj
+++ b/QuanLyKhoHang/QuanLyKhoHang.csproj
@@ -67,6 +67,12 @@
     <Compile Include="GiaoDien\fmInputPW.Designer.cs">
       <DependentUpon>fmInputPW.cs</DependentUpon>
     </Compile>
+    <Compile Include="GiaoDien\fmInsertEmp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GiaoDien\fmInsertEmp.Designer.cs">
+      <DependentUpon>fmInsertEmp.cs</DependentUpon>
+    </Compile>
     <Compile Include="GiaoDien\fmKhachHang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GiaoDien\fmInputPW.resx">
       <DependentUpon>fmInputPW.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GiaoDien\fmInsertEmp.resx">
+      <DependentUpon>fmInsertEmp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GiaoDien\fmKhachHang.resx">
       <DependentUpon>fmKhachHang.cs</DependentUpon>
