--- a/QuanLyKhoHang/QuanLyKhoHang.csproj
+++ b/QuanLyKhoHang/QuanLyKhoHang.csproj
@@ -85,13 +85,13 @@
     <Compile Include="GiaoDien\fmKho.Designer.cs">
       <DependentUpon>fmKho.cs</DependentUpon>
     </Compile>
-    <Compile Include="GiaoDien\fmNCC_NV_KH.cs">
+    <Compile Include="Config\Program.cs" />
+    <Compile Include="GiaoDien\fmLoaiSanPham.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GiaoDien\fmNCC_NV_KH.Designer.cs">
-      <DependentUpon>fmNCC_NV_KH.cs</DependentUpon>
+    <Compile Include="GiaoDien\fmLoaiSanPham.Designer.cs">
+      <DependentUpon>fmLoaiSanPham.cs</DependentUpon>
     </Compile>
-    <Compile Include="Config\Program.cs" />
     <Compile Include="GiaoDien\fmNhaCC.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,6 +103,12 @@
     </Compile>
     <Compile Include="GiaoDien\fmNhanVien.Designer.cs">
       <DependentUpon>fmNhanVien.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GiaoDien\fmPhieuNhap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GiaoDien\fmPhieuNhap.Designer.cs">
+      <DependentUpon>fmPhieuNhap.cs</DependentUpon>
     </Compile>
     <Compile Include="GiaoDien\fmQuanLy.cs">
       <SubType>Form</SubType>
@@ -129,14 +135,17 @@
     <EmbeddedResource Include="GiaoDien\fmKho.resx">
       <DependentUpon>fmKho.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GiaoDien\fmNCC_NV_KH.resx">
-      <DependentUpon>fmNCC_NV_KH.cs</DependentUpon>
+    <EmbeddedResource Include="GiaoDien\fmLoaiSanPham.resx">
+      <DependentUpon>fmLoaiSanPham.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GiaoDien\fmNhaCC.resx">
       <DependentUpon>fmNhaCC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GiaoDien\fmNhanVien.resx">
       <DependentUpon>fmNhanVien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GiaoDien\fmPhieuNhap.resx">
+      <DependentUpon>fmPhieuNhap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GiaoDien\fmQuanLy.resx">
       <DependentUpon>fmQuanLy.cs</DependentUpon>
