--- a/QuanLyKhoHang/QuanLyKhoHang.csproj
+++ b/QuanLyKhoHang/QuanLyKhoHang.csproj
@@ -110,6 +110,12 @@
     <Compile Include="GiaoDien\fmPhieuNhap.Designer.cs">
       <DependentUpon>fmPhieuNhap.cs</DependentUpon>
     </Compile>
+    <Compile Include="GiaoDien\fmPhieuXuat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GiaoDien\fmPhieuXuat.Designer.cs">
+      <DependentUpon>fmPhieuXuat.cs</DependentUpon>
+    </Compile>
     <Compile Include="GiaoDien\fmQuanLy.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GiaoDien\fmPhieuNhap.resx">
       <DependentUpon>fmPhieuNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GiaoDien\fmPhieuXuat.resx">
+      <DependentUpon>fmPhieuXuat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GiaoDien\fmQuanLy.resx">
       <DependentUpon>fmQuanLy.cs</DependentUpon>
@@ -242,6 +251,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\uparrow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\reload.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
