--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ChiTietPhieuNhapBUS.cs" />
     <Compile Include="ChiTietPhieuXuatBUS.cs" />
+    <Compile Include="DangNhapBUS.cs" />
     <Compile Include="KhachHangBUS.cs" />
     <Compile Include="KhoBUS.cs" />
     <Compile Include="LoaiSanPhamBUS.cs" />
