--- a/QuanLyKhoHang/Properties/Settings.settings
+++ b/QuanLyKhoHang/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="UserPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Server" Type="System.String" Scope="User">
+      <Value Profile="(Default)">null</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
