--- a/QuanLyKhoHang/app.config
+++ b/QuanLyKhoHang/app.config
@@ -13,6 +13,9 @@
             <setting name="UserPassword" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Server" serializeAs="String">
+                <value>null</value>
+            </setting>
         </QuanLyKhoHang.Properties.Settings>
     </userSettings>
 </configuration>
